APIMF-2398: added extends node for Operation and Message

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -989,6 +989,10 @@ nodeMappings:
   Message:
     classTerm: apiContract.Message
     mapping:
+      extends:
+        propertyTerm: doc.extends
+        range: Message
+        allowMultiple: true
       name:
         propertyTerm: core.name
         range: string
@@ -1285,8 +1289,10 @@ nodeMappings:
         propertyTerm: doc.extends
         typeDiscriminatorName: type
         typeDiscriminator:
+          SimpleTrait: Operation
           AppliedTrait: ParametrizedTrait
         range:
+          - Operation
           - ParametrizedTrait
         allowMultiple: true
     
