APIMF-2455: meta model change in kafka bindings

--- a/transform/src/test/resources/transformations/message-bindings/api.yaml
+++ b/transform/src/test/resources/transformations/message-bindings/api.yaml
@@ -13,4 +13,6 @@ channels:
             messageType: sometype
             contentEncoding: some/mime
           kafka:
-            key: somekey
+            key:
+              type: string
+              enum: ["somekey"]
