--- a/transform/src/test/resources/transformations/message-bindings/webapi.yaml
+++ b/transform/src/test/resources/transformations/message-bindings/webapi.yaml
@@ -23,7 +23,7 @@ encodes:
                   -
                     bindingType: Kafka
                     $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/web-api/end-points/some-channel/publish/request/message-bindings/kafka-message
-                    key: somekey
+                    key: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/web-api/end-points/some-channel/publish/request/message-bindings/kafka-message/key/scalar/schema
                     bindingVersion: latest
                     type: kafka
                   -
