--- a/transform/src/test/resources/transformations/raml-extension/webapi.yaml
+++ b/transform/src/test/resources/transformations/raml-extension/webapi.yaml
@@ -1,16 +1,47 @@
 #%WebAPI Spec 1.0
-unitType: Document
-$id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml#/rootAsset
+unitType: Extension
+$id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/rootAsset
 version: 2.1.2
-root: false
+root: true
+references:
+  -
+    unitType: Extension
+    $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml
+    version: 2.1.2
+    root: false
+    references:
+      -
+        unitType: Document
+        $id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml
+        version: 2.1.2
+        root: false
+        encodes:
+          elementType: WebAPI
+          $id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml#/web-api
+          name: Unsecure Template (Override me)
+          scheme:
+            - HTTPS
+          accepts:
+            - application/json
+          version: v1
+          contentType:
+            - application/json
+    encodes:
+      elementType: WebAPI
+      $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api
+      name: Secure Extension Template (Override me)
+      endpoint:
+        -
+          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core%2Fsecure%2Fping
+          path: /_core/secure/ping
+        -
+          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core%2Fsecure
+          path: /_core/secure
+        -
+          $id: file://transform/src/test/resources/transformations/raml-extension/secure-extension.raml#/web-api/end-points/%2F_core
+          path: /_core
 encodes:
   elementType: WebAPI
-  $id: file://transform/src/test/resources/transformations/raml-extension/unsecure-template.raml#/web-api
-  name: Unsecure Template (Override me)
-  scheme:
-    - HTTPS
-  accepts:
-    - application/json
+  $id: file://transform/src/test/resources/transformations/raml-extension/api.raml#/web-api
+  name: HTA Tax Authority API
   version: v1
-  contentType:
-    - application/json
