Fix: Removed REPO_* constants in transformer. Changed REPO_ASSET_LOCATION in rdf for BaseUnit.Location. Add BaseUnit Location to the Dialect

--- a/transform/src/test/resources/transformations/declares/webapi.yaml
+++ b/transform/src/test/resources/transformations/declares/webapi.yaml
@@ -46,6 +46,7 @@ declares:
     closed: false
 version: 2.1.2
 root: true
+location: file://transform/src/test/resources/transformations/declares/api.raml
 encodes:
   elementType: WebAPI
   $id: file://transform/src/test/resources/transformations/declares/api.raml#/web-api
