--- a/transform/src/test/resources/transformations/security/webapi.yaml
+++ b/transform/src/test/resources/transformations/security/webapi.yaml
@@ -52,6 +52,7 @@ declares:
           datatype: http://www.w3.org/2001/XMLSchema#string
 version: 2.1.2
 root: true
+location: file://transform/src/test/resources/transformations/security/api.raml
 encodes:
   elementType: WebAPI
   $id: file://transform/src/test/resources/transformations/security/api.raml#/web-api
