--- a/transform/src/test/resources/transformations/message-bindings/webapi.yaml
+++ b/transform/src/test/resources/transformations/message-bindings/webapi.yaml
@@ -3,6 +3,7 @@ unitType: Document
 $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/rootAsset
 version: 2.1.2
 root: true
+location: file://transform/src/test/resources/transformations/message-bindings/api.yaml
 encodes:
   elementType: WebAPI
   $id: file://transform/src/test/resources/transformations/message-bindings/api.yaml#/web-api
