--- a/transform/src/test/resources/transformations/raml-library/webapi.yaml
+++ b/transform/src/test/resources/transformations/raml-library/webapi.yaml
@@ -36,3 +36,4 @@ declares:
     closed: true
 version: 2.1.2
 root: true
+location: file://transform/src/test/resources/transformations/raml-library/api.raml
