--- a/transform/src/test/resources/transformations/tuple-shape-schema/webapi.yaml
+++ b/transform/src/test/resources/transformations/tuple-shape-schema/webapi.yaml
@@ -4,6 +4,7 @@ $id: file://transform/src/test/resources/transformations/tuple-shape-schema/api.
 version: 2.1.2
 root: true
 references: []
+location: file://transform/src/test/resources/transformations/tuple-shape-schema/api.raml
 encodes:
   elementType: WebAPI
   $id: file://transform/src/test/resources/transformations/tuple-shape-schema/api.raml#/web-api
