Test: changed AmfCompiler for RuntimeCompiler. Also corrected the ErrorHandler for the Unhandled and had to change test files as consequence

--- a/transform/src/test/resources/specs/async20/kafka-operation-binding.yaml
+++ b/transform/src/test/resources/specs/async20/kafka-operation-binding.yaml
@@ -8,5 +8,9 @@ channels:
     publish:
       bindings:
         kafka:
-          groupId: 310792
-          clientId: some3333unique09id
+          groupId:
+            type: string
+            enum: [ 'myGroupId' ]
+          clientId:
+            type: string
+            enum: [ 'myClientId' ]
