--- a/transform/src/test/resources/specs/async20/kafka-message-binding.yaml
+++ b/transform/src/test/resources/specs/async20/kafka-message-binding.yaml
@@ -9,4 +9,5 @@ channels:
       message:
         bindings:
           kafka:
-            key: somekey
+            key:
+              type: string
